--- a/app/course/styles.css
+++ b/app/course/styles.css
@@ -17,19 +17,23 @@
     position: relative;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     gap: 8px;
-    row-gap: 6px;
-    width: fit-content;
     padding: 4px;
     margin: 16px;
     border-radius: 12px;
     border: solid 1px var(--border);
-    background-color: var(--card);
+    background-color: var(--highlight);
     backdrop-filter: blur(24px);
+    overflow-y: scroll;
     transition: all ease-in-out 500ms;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.-scroll-none::-webkit-scrollbar { 
+display: none;  /* Safari and Chrome */
 }
 
 .controller-menu {
@@ -74,7 +78,7 @@
     flex-direction: row;
     align-items: start;
     min-height: 222px;
-    background-color: var(--card);
+    background-color: var(--highlight);
     border: solid 1px var(--border);
     overflow: hidden;
     transition: all ease-in-out 300ms;
@@ -107,8 +111,8 @@ article#changed-all {
     display: flex;
     flex-direction: column;
     height: max-content;
-    background-color: var(--card);
-    border: solid 1px var(--ter);
+    background-color: var(--highlight);
+    border: solid 1px var(--border);
     border-radius: 12px;
     overflow: hidden;
     transition: all ease-in-out 300ms;
@@ -129,7 +133,7 @@ article#changed-all {
 .edit-placeholder {
     padding: 8px;
     border-radius: 8px;
-    border: solid 1px var(--ter);
+    border: solid 1px var(--border);
     font-size: 0.875rem;
     text-wrap: wrap;
 }
@@ -163,11 +167,5 @@ article#changed-all {
 
 .edit-placeholder:hover > .editor-field {
     border-bottom: solid 1px var(--border);
-    background-color: var(--card);
+    background-color: var(--highlight);
 }
-
-.artificial-table {
-    height: calc(100dvh - 90px - 64px - 48px);
-    backdrop-filter: blur(24px);
-    animation: smooth-appear 400ms ease forwards;
-  }
