--- a/app/styles/interface.css
+++ b/app/styles/interface.css
@@ -86,7 +86,7 @@ display: none;  /* Safari and Chrome */
     color: white;
     animation: smooth-appear 400ms ease forwards;
 }
-  
+
 .card-main > div > img {
     position: absolute;
     z-index: -10;
@@ -97,6 +97,36 @@ display: none;  /* Safari and Chrome */
 .card-main:hover > div > img {
     transform: scale(1.02);
     transition: all ease-in-out 400ms;
+}
+
+.card-2-main {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    overflow: hidden;
+    transition: all ease-in-out 300ms;
+    border-radius: 12px;
+    animation: smooth-appear 400ms ease forwards;
+}
+
+.card-2-main > .card-2-image {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: -50;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden
+}
+
+.card-2-main > .card-2-content {
+    padding: 16px;
+    height: 100%;
+    width: 100%;
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
 }
 
 article#changed-all {
@@ -164,6 +194,25 @@ article#changed-all {
     white-space: wrap;
     overflow: hidden;
     border-bottom: solid 1px transparent;
+}
+
+.edit-placeholder > .toggle-field {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    outline: none;
+    text-wrap: balance;
+    white-space: wrap;
+    overflow: hidden;
+    font-weight: 800;
+}
+
+.toggle-field.toggleOn {
+    color: var(--teal);
+}
+
+.toggle-field.toggleOff {
+    color: var(--red);
 }
 
 .edit-placeholder:hover > .editor-field {
