--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -8,7 +8,7 @@ html.light {
   /* white #ffffff /100 */
   --base-inverse: rgba(255, 255, 255, 1.0);
   /* gray-100 #f3f4f6 /90 */
-  --highlight-strong: rgba(255, 255, 255, 0.95);
+  --highlight-strong: rgba(255, 255, 255, 0.9);
   /* gray-100 #f3f4f6 /70 */
   --highlight: rgba(243, 244, 246, 0.7);
   /* gray-200 #e5e7eb /70 */
@@ -21,6 +21,8 @@ html.light {
   --sec: rgba(244, 63, 94, 1.0);
   /* rose-500 #f43f5e /20 */
   --sec-accent: rgba(244, 63, 94, 0.2);
+  /* f0f0f0 / 100 */
+  --ter: rgba(160, 160, 160, 1.0);
   /* slate-500 #64748b /100 */
   --text-slate: rgba(100, 116, 139, 1.0);
   /* teal-600 #0d9488 /100 */
@@ -29,6 +31,9 @@ html.light {
   --red: rgba(220, 38, 38, 1.0);
   /* amber-600 #d97706 /100 */
   --amber: rgba(217, 119, 6, 1.0);
+  /* special */
+  --bg: rgba(250, 250, 250, 0.90);
+  --bgaccent: rgba(255, 255, 255, 0.90);
 }
   
 html.dark {
@@ -37,7 +42,7 @@ html.dark {
   /* black #000000 /100 */
   --base-inverse: rgba(0, 0, 0, 1.0);
   /* gray-900 #11181c /90 */
-  --highlight-strong: rgba(0, 0, 0, 0.9);
+  --highlight-strong: rgba(0, 0, 0, 0.8);
   /* gray-900 #11181c /70 */
   --highlight: rgba(17, 24, 28, 0.7);
   /* gray-800 #1f2937 /70 */
@@ -50,6 +55,8 @@ html.dark {
   --sec: rgba(251, 113, 133, 1.0);
   /* rose-400 #fb7185 /20 */
   --sec-accent: rgba(251, 113, 133, 0.2);
+  /* fefefe / 100 */
+  --ter: rgba(239, 239, 239, 1.0);
   /* slate-500 #64748b /100 */
   --text-slate: rgba(100, 116, 139, 1.0);
   /* teal-400 #2dd4bf /100 */
@@ -58,6 +65,9 @@ html.dark {
   --red: rgba(248, 113, 113, 1);
   /* amber-400 #fbbf24 /100 */
   --amber: rgba(251, 191, 36, 1);
+  /* special */
+  --bg: rgba(0, 0, 0, 0.75);
+  --bgaccent: rgba(0, 0, 0, 0.85);
 }
 
 @media screen and (min-width: 1024px) {
@@ -167,7 +177,7 @@ hr {
 }
 
 nav {
-  background-color: var(--highlight);
+  background-color: var(--highlight-strong);
   border-bottom: solid 1px var(--border);
   backdrop-filter: blur(16px);
   -webkit-backdrop-filter: blur(16px)
@@ -222,7 +232,7 @@ footer {
   text-align: center;
   border: solid 1px var(--border);
   border-radius: 12px;
-  background-color: var(--highlight);
+  background-color: var(--highlight-strong);
   backdrop-filter: blur(24px);
   -webkit-backdrop-filter: blur(24px);
   transform: scale3d(1.1);
@@ -242,29 +252,24 @@ footer {
 }
 
 .glass-cover-spread {
-  position: absolute;
-  top: -32px;
-  left: -32px;
-  height: calc(100% + 64px);
-  width: calc(100% + 64px);
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100dvh;
+  width: 100dvw;
   z-index: -10;
-  backdrop-filter: blur(16px);
-  -webkit-backdrop-filter: blur(16px);
+  backdrop-filter: blur(24px);
+  -webkit-backdrop-filter: blur(24px);
 }
 
-.under-glass-cover-spread {
-  position: absolute;
-  top: 8px;
-  left: 8px;
-  height: calc(100% - 16px);
-  width: calc(100% - 16px);
-  z-index: -50;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  filter: brightness(1.5);
-  -webkit-filter: brightness(1.5);
+.panel {
+  border: solid 1px var(--border);
+  border-radius: 12px;
+  background-color: var(--highlight-strong);
+  backdrop-filter: blur(24px);
+  -webkit-backdrop-filter: blur(24px);
+  transform: scale3d(1.1);
+  animation: smooth-appear 400ms ease forwards;
 }
 
 /* ---------------------------------------- */
@@ -381,6 +386,16 @@ footer {
   border-radius: 12px;
   background-color: var(--bgaccent);
   border: solid 1px var(--border);
+}
+
+#clear-chip {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  padding: 2px 8px 2px 8px;
+  border-radius: 56px;
 }
 
 #pri-chip {
