--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -8,11 +8,13 @@ html.light {
   /* white #ffffff /100 */
   --base-inverse: rgba(255, 255, 255, 1.0);
   /* gray-100 #f3f4f6 /90 */
-  --highlight-strong: rgba(255, 255, 255, 0.9);
+  --highlight-strong: rgba(243, 244, 246, 0.9);
   /* gray-100 #f3f4f6 /70 */
   --highlight: rgba(243, 244, 246, 0.7);
-  /* gray-200 #e5e7eb /70 */
-  --border: rgba(229, 231, 235, 0.7);
+  /* shadow */
+  --shadow: rgba(0, 0, 0, 0.05);
+  /* gray-300 #d1d5db /100 */
+  --border: rgba(209, 213, 219, 0.9);
   /* blue-500 #3b82f6 /100 */
   --pri: rgba(59, 130, 246, 1.0);
   /* blue-500 #3b82f6 /20 */
@@ -45,8 +47,10 @@ html.dark {
   --highlight-strong: rgba(0, 0, 0, 0.8);
   /* gray-900 #11181c /70 */
   --highlight: rgba(17, 24, 28, 0.7);
-  /* gray-800 #1f2937 /70 */
-  --border: rgba(31, 41, 55, 0.7);
+  /* shadow */
+  --shadow: rgba(255, 255, 255, 0.1);
+  /* gray-700 #374151 /100 */
+  --border: rgba(55, 65, 81, 1.0);
   /* blue-400 #60a5fa /100 */
   --pri: rgba(96, 165, 250, 1.0);
   /* blue-400 #60a5fa /70 */
