--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -254,9 +254,11 @@ footer {
   bottom: 0;
   left: 0;
   right: 0;
-  height: 100dvh;
+  height: calc(100dvh - 64px);
   width: 100dvw;
+  z-index: 100;
   background-color: var(--bgaccent);
+  color: var(--base);
   animation: fade-glass 800ms ease forwards;
 }
 
@@ -351,7 +353,7 @@ footer {
   width: 0%;
   height: 2px;
   left: 0;
-  bottom: 0;
+  bottom: -2px;
   z-index: -1;
   background-color: var(--base);
   transition: all 0.25s ease;
