--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -103,6 +103,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--base-inverse);
+  overflow-x: hidden;
   -ms-overflow-style: none;  /* Internet Explorer 10+ */
   scrollbar-width: none;  /* Firefox */
   transition: all ease-in-out 200ms;
