--- a/app/styles/interface.css
+++ b/app/styles/interface.css
@@ -33,6 +33,10 @@
     scrollbar-width: none;  /* Firefox */
 }
 
+.controller-island::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
+}
+
 .-scroll-none::-webkit-scrollbar { 
     display: none;  /* Safari and Chrome */
 }
