--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -34,8 +34,8 @@ html.light {
   /* amber-600 #d97706 /100 */
   --amber: rgba(217, 119, 6, 1.0);
   /* special */
-  --bg: rgba(250, 250, 250, 0.90);
-  --bgaccent: rgba(255, 255, 255, 0.90);
+  --bg: rgba(250, 250, 250, 1);
+  --bgaccent: rgba(240, 244, 248, 1);
 }
   
 html.dark {
@@ -71,10 +71,10 @@ html.dark {
   --amber: rgba(251, 191, 36, 1);
   /* special */
   --bg: rgba(0, 0, 0, 0.75);
-  --bgaccent: rgba(0, 0, 0, 0.85);
+  --bgaccent: rgba(2, 6, 17, 1);
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 800px) {
   :root {
     --aside-visibility: flex;
     --aside-width: 300px;
@@ -82,7 +82,7 @@ html.dark {
   }
 }
 
-@media screen and (min-width: 0px) and (max-width: 1024px) {
+@media screen and (min-width: 0px) and (max-width: 800px) {
   :root {
     --aside-visibility: none;
     --aside-width: 300px;
@@ -98,6 +98,7 @@ html {
   padding: 0;
   margin: 0;
   font-family: 'Plus Jakarta Sans', sans-serif;
+  font-size: 0.9rem;
   font-weight: 400;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
@@ -105,13 +106,18 @@ html {
   background-color: var(--base-inverse);
   overflow-x: hidden;
   -ms-overflow-style: none;  /* Internet Explorer 10+ */
-  scrollbar-width: none;  /* Firefox */
   transition: all ease-in-out 200ms;
 }
 
 html::-webkit-scrollbar { 
   display: none;  /* Safari and Chrome */
+  scrollbar-track-color: #00000000;
+  scrollbar-gutter: none;
 }
+
+html::-webkit-scrollbar-track {
+  background: transparent;
+ }
 
 input:focus, input,
 select:focus, textarea,
@@ -121,11 +127,6 @@ textarea:focus {
   -ms-overflow-style: none;  /* Internet Explorer 10+ */
   scrollbar-width: none;  /* Firefox */
   height: fit-content;
-}
-
-#brand {
-  font-weight: 900;
-  font-size: 1.2rem;
 }
 
 h1 {
@@ -184,7 +185,8 @@ hr {
 }
 
 nav {
-  background-color: var(--highlight-strong);
+  height: 64px;
+  background-color: var(--bgaccent);
   border-bottom: solid 1px var(--border);
   backdrop-filter: blur(16px);
   -webkit-backdrop-filter: blur(16px);
