--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -35,6 +35,8 @@ html.light {
   --amber: rgba(217, 119, 6, 1.0);
   /* special */
   --bg: rgba(250, 250, 250, 1);
+  /* special */
+  --bg-hover: rgba(187, 197, 213, 0.5);
 }
   
 html.dark {
@@ -70,6 +72,8 @@ html.dark {
   --amber: rgba(251, 191, 36, 1);
   /* special */
   --bg: rgba(7, 14, 21, 1);
+  /* special */
+  --bg-hover: rgba(55, 65, 81, 0.75);
 }
 
 @media screen and (min-width: 800px) {
@@ -348,6 +352,36 @@ textarea {
   }
 }
 
+.-border-l {
+  border-left: solid 1px var(--border);
+}
+
+.-border-r {
+  border-right: solid 1px var(--border);
+}
+
+.-border-t {
+  border-top: solid 1px var(--border);
+}
+
+.-border-b {
+  border-bottom: solid 1px var(--border);
+}
+
+.-border-x {
+  border-left: solid 1px var(--border);
+  border-right: solid 1px var(--border);
+}
+
+.-border-y {
+  border-top: solid 1px var(--border);
+  border-bottom: solid 1px var(--border);
+}
+
+.-border{
+  border: solid 1px var(--border);
+}
+
 .background-image {
   position: fixed;
   top: 64px;
@@ -356,6 +390,16 @@ textarea {
   width: 100dvw;
   z-index: -1000;
   filter: brightness(2);
+}
+
+.-hover-bg-100:hover {
+  background-color: var(--bg-hover);
+  transition: all ease-in-out 100ms;
+}
+
+.-hover-bg-200:hover {
+  background-color: var(--bg-hover);
+  transition: all ease-in-out 200ms;
 }
 
 .-button-line {
